[gd_scene load_steps=45 format=2]

[ext_resource path="res://RuneGrid.gd" type="Script" id=1]
[ext_resource path="res://Rune.tscn" type="PackedScene" id=2]
[ext_resource path="res://antiquity.tres" type="DynamicFont" id=3]
[ext_resource path="res://Game.gd" type="Script" id=4]
[ext_resource path="res://SpellLabel.gd" type="Script" id=5]
[ext_resource path="res://Enemy.tscn" type="PackedScene" id=6]
[ext_resource path="res://SpellPowerOrb.tscn" type="PackedScene" id=7]
[ext_resource path="res://EnemyHealthOrb.tscn" type="PackedScene" id=8]
[ext_resource path="res://SpellPower.gd" type="Script" id=9]
[ext_resource path="res://EnemyHealth.gd" type="Script" id=10]
[ext_resource path="res://Chest.png" type="Texture" id=11]
[ext_resource path="res://Coin.tscn" type="PackedScene" id=12]
[ext_resource path="res://antiquity-print.ttf" type="DynamicFontData" id=13]
[ext_resource path="res://MedievalSharp-Regular.ttf" type="DynamicFontData" id=14]
[ext_resource path="res://RoundTimer.gd" type="Script" id=15]

[sub_resource type="Theme" id=1]
default_font = ExtResource( 3 )

[sub_resource type="Curve" id=2]
_data = [ Vector2( 0, 0.540541 ), 0.0, 0.0, 0, 0, Vector2( 0.515351, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.54955 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="DynamicFontData" id=3]
antialiased = false
font_path = "res://antiquity-print.ttf"

[sub_resource type="DynamicFont" id=4]
size = 26
extra_spacing_char = 3
font_data = SubResource( 3 )

[sub_resource type="Theme" id=5]
default_font = SubResource( 4 )

[sub_resource type="DynamicFont" id=23]
size = 32
extra_spacing_top = -1
font_data = ExtResource( 14 )

[sub_resource type="Theme" id=22]
default_font = SubResource( 23 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 288, 512 )

[sub_resource type="Curve2D" id=7]
_data = {
"points": PoolVector2Array(  )
}

[sub_resource type="Curve2D" id=8]
_data = {
"points": PoolVector2Array(  )
}

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 11 )
region = Rect2( 64, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 11 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 11 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 11 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 11 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 11 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 11 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 11 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 11 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 11 )
region = Rect2( 64, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=19]
animations = [ {
"frames": [ SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ) ],
"loop": false,
"name": "close",
"speed": 15.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ) ],
"loop": false,
"name": "open",
"speed": 15.0
} ]

[sub_resource type="DynamicFont" id=24]
size = 39
extra_spacing_top = -19
font_data = ExtResource( 13 )

[sub_resource type="Theme" id=25]
default_font = SubResource( 24 )

[sub_resource type="Curve2D" id=20]
resource_local_to_scene = true
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0.25, 0.25, -28.6946, 26.5165, 28.6946, -26.5165, 57.25, 0.75 )
}

[sub_resource type="DynamicFont" id=26]
size = 39
extra_spacing_top = -11
font_data = ExtResource( 13 )

[sub_resource type="Theme" id=27]
default_font = SubResource( 26 )

[sub_resource type="DynamicFont" id=28]
size = 26
font_data = ExtResource( 13 )

[sub_resource type="Theme" id=29]
default_font = SubResource( 28 )

[sub_resource type="Animation" id=30]
resource_name = "almost_timeout"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Game" type="Node2D"]
script = ExtResource( 4 )

[node name="Label" type="Label" parent="."]
visible = false
margin_left = 192.0
margin_top = 32.0
margin_right = 384.0
margin_bottom = 76.0
theme = SubResource( 1 )
text = "Boggle Clone"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LayoutGuide" type="Node" parent="."]

[node name="Runes" type="ReferenceRect" parent="LayoutGuide"]
margin_left = 16.0
margin_top = 439.0
margin_right = 560.0
margin_bottom = 983.0
mouse_filter = 2
border_color = Color( 0.172549, 0.0862745, 0.8, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Enemy" type="ReferenceRect" parent="LayoutGuide"]
visible = false
margin_left = 192.0
margin_top = 51.0
margin_right = 384.0
margin_bottom = 243.0
editor_only = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RuneGrid" type="Node2D" parent="."]
script = ExtResource( 1 )

[node name="RuneStart" parent="RuneGrid" instance=ExtResource( 2 )]
position = Vector2( 16, 575 )

[node name="CastingLine" type="Line2D" parent="."]
width_curve = SubResource( 2 )
default_color = Color( 0.4, 0.14902, 0.454902, 1 )

[node name="SpellLabel" type="Label" parent="."]
margin_top = 374.0
margin_right = 575.0
margin_bottom = 438.0
theme = SubResource( 5 )
text = "ABCDEFGHI"
align = 1
valign = 1
uppercase = true
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DefinitionLabel" type="Label" parent="."]
margin_left = 1.0
margin_top = 983.0
margin_right = 1151.0
margin_bottom = 1065.0
rect_scale = Vector2( 0.5, 0.5 )
theme = SubResource( 22 )
text = "This is the word's definition lorem ipsum ghskkm k moskso ksnjnjnjnkj Qmmkmdkm MNJNJ  m kmeeok oeke eko kek eoeoe qosppl KAKAM"
align = 1
valign = 1
autowrap = true
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CastSpell" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CastSpell"]
visible = false
position = Vector2( 288, 512 )
shape = SubResource( 6 )

[node name="EnemyHealth" type="Node2D" parent="."]
script = ExtResource( 10 )

[node name="EnemyHealthOrb" parent="EnemyHealth" instance=ExtResource( 8 )]
position = Vector2( 141.5, 283.5 )

[node name="EnemyHealthOrb2" parent="EnemyHealth" instance=ExtResource( 8 )]
position = Vector2( 178.5, 283.5 )

[node name="EnemyHealthOrb3" parent="EnemyHealth" instance=ExtResource( 8 )]
position = Vector2( 215.5, 283.5 )

[node name="EnemyHealthOrb4" parent="EnemyHealth" instance=ExtResource( 8 )]
position = Vector2( 252.5, 283.5 )

[node name="EnemyHealthOrb5" parent="EnemyHealth" instance=ExtResource( 8 )]
position = Vector2( 289.5, 283.5 )

[node name="EnemyHealthOrb6" parent="EnemyHealth" instance=ExtResource( 8 )]
position = Vector2( 326.5, 283.5 )

[node name="EnemyHealthOrb7" parent="EnemyHealth" instance=ExtResource( 8 )]
position = Vector2( 363.5, 283.5 )

[node name="EnemyHealthOrb8" parent="EnemyHealth" instance=ExtResource( 8 )]
position = Vector2( 400.5, 283.5 )

[node name="EnemyHealthOrb9" parent="EnemyHealth" instance=ExtResource( 8 )]
position = Vector2( 437.5, 283.5 )

[node name="SpellPower" type="Node2D" parent="."]
z_index = 1
script = ExtResource( 9 )

[node name="SpellPowerOrb" parent="SpellPower" instance=ExtResource( 7 )]
position = Vector2( 141, 345 )
curve = SubResource( 7 )

[node name="SpellPowerOrb2" parent="SpellPower" instance=ExtResource( 7 )]
position = Vector2( 178, 345 )
curve = SubResource( 8 )

[node name="Enemy" parent="." instance=ExtResource( 6 )]
position = Vector2( 288, 146 )

[node name="Chest" type="AnimatedSprite" parent="."]
position = Vector2( 518, 146 )
scale = Vector2( 5.5, 5.5 )
frames = SubResource( 19 )
animation = "open"

[node name="Label" type="Label" parent="Chest"]
margin_left = -8.18182
margin_top = 8.54546
margin_right = 57.8182
margin_bottom = 46.5455
rect_scale = Vector2( 0.249823, 0.253577 )
theme = SubResource( 25 )
text = "123"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Coin" parent="." instance=ExtResource( 12 )]
position = Vector2( 288, 146 )
curve = SubResource( 20 )

[node name="RoundTimer" type="Timer" parent="."]
wait_time = 90.0
one_shot = true
autostart = true
script = ExtResource( 15 )

[node name="Labels" type="GridContainer" parent="RoundTimer"]
margin_left = 20.0
margin_top = 6.0
margin_right = 148.0
margin_bottom = 52.0
columns = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Minutes" type="Label" parent="RoundTimer/Labels"]
margin_right = 24.0
margin_bottom = 46.0
size_flags_horizontal = 0
theme = SubResource( 27 )
text = "9"
align = 2
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="m" type="Label" parent="RoundTimer/Labels"]
margin_left = 28.0
margin_top = 4.0
margin_right = 50.0
margin_bottom = 42.0
theme = SubResource( 29 )
text = "m"
__meta__ = {
"_edit_lock_": true
}

[node name="Seconds" type="Label" parent="RoundTimer/Labels"]
margin_left = 54.0
margin_right = 106.0
margin_bottom = 46.0
size_flags_horizontal = 3
theme = SubResource( 27 )
text = "99"
align = 2
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="s" type="Label" parent="RoundTimer/Labels"]
margin_left = 110.0
margin_top = 4.0
margin_right = 128.0
margin_bottom = 42.0
theme = SubResource( 29 )
text = "s"
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="RoundTimer/Labels"]
anims/almost_timeout = SubResource( 30 )

[connection signal="input_event" from="CastSpell" to="RuneGrid" method="_on_CastSpell_input_event"]
